fixtures/cs-jwt-01/good/decode-in-string-literal.ts
import jwt from "jsonwebtoken";

export const example = "jwt.decode(token) is not a real call";

export function readToken(token: string) {
	return example;
}
