fixtures/cs-jwt-01/bad/named-import-decode-alias.ts
import { decode as parseJwt } from "jsonwebtoken";

export function readToken(token: string) {
	return parseJwt(token);
}
